objects/Case_Timing__c.object
<CustomObject>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <description>This field allows input of a description for why the clock in/out time was changed.</description>
        <label>Change Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Clock_Ins__c</fullName>
        <description>Number of Total Clock In records for a single case.</description>
        <label>Number of Clock Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <description>This field shows the case related to the case timing.</description>
        <label>Related Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer Service Case, Technical Support Case, CRM Case, Marketing Case, Partner Management Case</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Timings</relationshipLabel>
        <relationshipName>Case_Timings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Started_Work__c</fullName>
        <description>This field contains the date/time when the resource began working on the case.</description>
        <label>Started Work</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_to_First_Response__c</fullName>
        <description>Calculates the time (in hours) between the case&apos;s created date and the case timing record created date.</description>
        <formula>(CreatedDate - Related_Case__r.CreatedDate) * 24</formula>
        <label>Time to First Response (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <description>This field calculates the difference between the Started Work and Work Ended timings to show the total time spent working on a case.</description>
        <formula>(Work_Ended__c - Started_Work__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time Spent (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Ended__c</fullName>
        <description>This field tracks the date/time that a resource completed working on a case.</description>
        <label>Work Ended</label>
        <type>DateTime</type>
    </fields>
    <label>Case Timing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Timing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Timings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>